examples/monitor-prom-remotewrite-enable-basic-auth/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    cluster: basic
  name: basic-prometheus-remote
spec:
  ports:
  - name: web
    port: 9090
    targetPort: 9090
  selector:
    prometheus: basic
  sessionAffinity: ClientIP
