examples/monitor-prom-remotewrite-enable-basic-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  ingressClassName: nginx
  rules:
    - host: test.prometheus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basic-prometheus-remote
                port:
                  number: 9090
